--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,8 @@ table {
     width: 100%;
     border-collapse: collapse;
     border: 2px solid #000;
+     font-weight: bold;
+     font-size: 13px;
 }
 
 th, td {
@@ -32,14 +34,16 @@ th, td {
 .main-header {
     text-align: center;
     font-size: 24px;
-    background-color: #fff;
+    /* background-color: #fff; */
     padding: 15px;
+    border-bottom: none;  /* Add this line */
 }
 
 .subheader {
     text-align: center;
     font-style: italic;
     padding: 10px;
+    border-top: none;    /* Add this line */
 }
 
 .blue-note {
@@ -63,8 +67,40 @@ th, td {
 }
 
 .car-images {
-    height: 200px;
+    height: 250px;
     background-color: #f5f5f5;
+    padding: 0;
+    position: relative;
+    overflow: hidden;
+}
+
+.car-image-container {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    position: relative;
+}
+
+/* Update the .car-image selector to target only img elements */
+img.car-image {
+    display: block;
+    width: 100%;
+    /* height: 100%; */
+ height: 200px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.car-image:first-child {
+    border-left: none;  /* Remove left border from first image */
+}
+
+.car-image:last-child {
+    border-right: none;  /* Remove right border from last image */
+}
+
+.car-image-cell {
+    padding: 0;
 }
 
 .years-row td {
@@ -86,6 +122,14 @@ th, td {
 .pros-row td,
 .cons-row td {
     padding: 15px 10px;
+}
+
+.problems-row {
+    background-color: rgb(249, 220, 167);
+}
+
+.alternates-row {
+    background-color: #cde0e6; /* baby blue */
 }
 
 @media (max-width: 768px) {
